--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <script type="module" src="app.js"></script>
   </head>
   <body>
-    <h1>Hello, UOC!</h1>
+    <h1>Hello, UOC! </h1>
+    <h2>fbellos </h2>
   </body>
 </html>
